...
    const val about_title = "about_title"
    const val about_subtitle = "about_subtitle"
    const val about_prompt_container = "about_prompt_container"
    const val about_input = "about_input"
    const val about_continue = "about_continue"

    const val experiences_screen_container = "experiences_screen_container"
    const val experiences_top_bar = "experiences_top_bar"
    const val experiences_title = "experiences_title"
    const val experiences_subtitle = "experiences_subtitle"
    const val experiences_topic_grid = "experiences_topic_grid"
    const val experiences_cta = "experiences_cta"
    const val activities_screen = "activities_screen"
    const val map_screen = "map_screen"
    const val map_top_app_bar = "map_top_app_bar"
    const val map_container = "map_container"
    const val map_locate_user_fab = "map_locate_user_fab"
    const val map_toggle_view_fab = "map_toggle_view_fab"
...
