...
  /** Initializes the list of available activities. */
  private fun initializeAvailableActivities() {
    val activities =
        listOf(
            // Sports
            "Football",
            "Basketball",
            "Tennis",
            "Swimming",
            "Hiking",
            "Running",
            "Cycling",
            "Volleyball",
...
